src/App.css
* {
    box-sizing: border-box;
}

body {
  background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
  width: 1440px;
  margin: auto;
  font-family: 'Red Rose', cursive;
}

ul {
  list-style: none;
  margin: 0;
}

.header-nav {
  margin: 2.6rem 6.2rem;
  display: flex;
  align-items: center;
}

.nav-link {
  margin-left: 10rem;
  margin-right: 11.5rem;
  color: #434343;
}

.nav-link a {
  text-decoration: none;
  color: #434343;
}

.nav-link ul {
  display: flex;
  gap: 3rem;
}

.logo-left {
  width: 2.6rem;
}

.logo-text {
  width: 11.7rem;
}

.nav-button {
  text-decoration: none;
  color: #FFFFFF;
  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
  padding: 0.9rem 1.6rem;
  border-radius: 0.6rem;
}

.header-hero {
  display: flex;
}

.header-hero-inner {
  margin-left: 6.2rem;
  margin-right: 6.2rem;
  max-width: 40.3rem;
}

.header-hero-inner h1 {
  font-size: 3.5rem;
  font-weight: 400;
  line-height: 4.8rem;
  letter-spacing: -2%;
}

.header-hero-inner p {
  font-size: 1.5rem;
  line-height: 2.2rem;
  font-weight: 400;
  margin-bottom: 3rem;
}

.header-hero-inner input {
  width: 24rem;
  padding: 1.1rem 0.9rem;
  border: 1px solid #A3A3A3;
  border-radius: 8px 0px 0px 8px;

}

.header-hero-inner button {
  width: 14rem;
  border: none;
  padding: 1.1rem 0.9rem;
  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.46%);
  border-radius: 0px 8px 8px 0px;
  color: #FFFFFF;
}

.header-img-grid {
  max-width: 29.7rem;
  margin-bottom: 4.2rem;
}

span {
  color: #A02279;
}

.header-bottom-logo {
  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
  width: 100%;
  text-align: center;
  margin-bottom: 1.2rem;
}

.header-bottom-logo img {
  height: 3.1rem;
  padding: 0.6rem 6.3rem 0.6rem 6.3rem;
}

main {
  width: 100%;
  height: 60rem;
  text-align: center;
}

main h1 {
  font-size: 3rem;
}

.contact-card {
  width: 18rem;
  padding: 1rem;
  background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
  border: 1px solid #D7D7D7;
  border-radius: 0.9rem;
  font-size: 0.75rem;
}

#card-img {
  width: 16rem;
}

.card-display {
  display: flex;
  justify-content: space-between;
}

.main-grid {
  display: flex;
  gap: 1.5rem;
  margin: 1.5rem 6.2rem 1.5rem 6.2rem;
}

footer {
  width: 100%;
  color: #FFFFFF;
}

footer ul {
  padding: 0;
}

.footer-top {
  margin: auto;
  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
  border: 1px solid #000000;
  display: flex;
  gap: 7.6rem;
  padding-left: 6.2rem;
}

.footer-top p{
  width: 26rem;
  margin-top: 2.1rem;
  margin-bottom: 3.5rem;
}

.footer-top h2 {
  margin-top: 11.6rem;
}

.footer-top img {
  margin: 6.2rem 0;
}

.footer-top button {
  background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
  border-radius: 8px;
  padding: 0.8rem 2rem;
  border: none;
  color: #A02279;
}

.footer-bottom {
  background: #1D1D1E;
  display: flex;
  justify-content: space-between;
  padding-top: 58px;
  padding-left: 113px;
  padding-right: 209px;
  color: #FFFFFF;
}

.footer-bottom h3 {
  font-size: 1.1rem;
}

.footer-bottom li {
  margin-bottom: 1rem;
  font-size: 0.8rem;
}

.footer-logo {
  width: 14.5rem;
  height: 2.5rem;
}

.footer-bottom ul {
  padding: 0;
  
}

.socials {
  margin-top: 6rem;
  margin-bottom: 3.5rem;
  display: flex;
  gap: 2.6rem;
}

.copy-right {
  margin-bottom: 2.3rem;
}

.modal {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  background: rgba(64, 64, 64, 0.3);
}

.modal-content {
  position: absolute;
  width: 37.5rem;
  height: 20.3rem;
  left: 29.6rem;
  top: 15.6rem;
  background: #FFFFFF;
  border-radius: 16px;
  padding: 1.5rem 2rem;
}

.modal-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid #CFD8DC;
}

.modal a {
  display: flex;
  flex-direction: row;
  margin-bottom: 0.8rem;
  padding: 0.75rem 1.25rem;
  border: 1px solid #CFD8DC;
  border-radius: 0.75rem;
  text-decoration: none;
  color: #000000;
  align-items: center;
}

.modal-img {
  margin-right: 1rem;
}

.place-links {
  display: flex;
  align-items: center;
  margin-top: 8.4rem;
  margin-bottom: 4.6rem;
}

.place-links ul {
  display: flex;
  margin-left: 6.2rem;
}

.place-links li {
  margin-right: 3rem;
  font-size: 1.2rem;
  font-weight: 400;
  color: #434343;
}

.place-links button {
  margin-left: 4rem;
  background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
  border: 1px solid #B4B4B4;
  border-radius: 8px;
  padding: 0.8rem 0.8rem;
  font-family: 'Red Rose';
  font-size: 1.2rem;
  color: #434343;
}

.place-grid {
  margin-bottom: 5.7rem;
}

@media screen and (max-width: 820px) {
  body {
    width: 820px;
    height: 4300px;
  }

  header {
    width: 100%;
  }

  .header-nav {
    max-width: 820px;
    margin: 20px;
  }

  .logo-left {
    width: 30px;
  }

  .logo-text {
    width: 100px;
  }

  .nav-link {
    margin-left: 10px;
    margin-right: 8px;
  }

  .header-hero {
    display: block;
    text-align: center;
  }

  .header-img-grid {
    width: 60%;
    margin: 10px auto;
  }

  .header-bottom-logo img {
    padding-left: 50px;
    padding-right: 50px;
  }

  main h1 {
    width: 70%;
    margin: 10px auto;
  }

  .main-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  footer {
    position: relative;
    top: 900px;
  }

  .footer-top {
    padding-left: 0;
    display: block;
  }

  .footer-top h2 {
    width: 60%;
    margin: 50px auto;
  }

  .footer-top p {
    width: 60%;
    margin: 0 auto;
  }

  .footer-top button {
    width: 40%;
    margin: 25px 230px;
  }

  .foot-img1 {
    width: 70%;
    padding-left: 230px;
  }

  .footer-bottom {
    padding-right: 113px;
  }

  .modal-content {
    left: 115px;
    top: 150px;
  }
}

@media screen and (max-width: 375px) {
  body {
    width: 375px;
    height: 4700px;
  }

  header {
    width: 100%;
  }

  .header-nav {
    max-width: 375px;
    margin: 4px;
  }

  .nav-link, 
  .nav-button {
    display: none;
  }

  .header-hero {
    display: block;
  }

  .header-hero-inner {
    margin-left: 2px;
    margin-right: 2px;
    max-width: 370px;
    margin-bottom: 20px;
    text-align: center;
  }

  .search input {
    border-radius: 8px;
    width: 80%;
  }

  .search button {
    border-radius: 8px;
    width: 50%;
    margin-top: 8px;
  }

  .header-bottom-logo {
    width: 375px;
  }

  main {
    width: 375px;
  }

  .main-grid {
    padding-left: 43px;
    padding-right: 43px;
    display: grid;
    grid-template-columns: 1fr;
    margin: 2px;
  }

  .main-grid-bottom {
    margin-top: 1.5rem;
  }

  .header-img-grid img {
    padding: 8px;
    max-width: 370px;
    margin-bottom: 3px;
  }

  footer {
    max-width: 375px;
    padding: 2px;
    text-align: center;
    position: relative;
    top: 2700px;
    left: 0;
  }

  .footer-top {
    display: block;
    padding: 0;
  }

  .footer-top p {
    max-width: 80%;
    padding-left: 55px;
  }

  .foot-img1 {
    max-width: 370px;
  }

  .footer-top h2 {
    margin-top: 4px;
  }

  .footer-top p{
    margin-left: 2px;
    margin-right: 2px;
  }

  .footer-bottom {
    flex-direction: column-reverse;
    padding: 0;
  }

  .footer-logo {
    margin-bottom: 8px;
  }

  .socials {
    width: 40%;
    margin: auto;

  }

}

